Fixed that create item dropdown menu was cut off by the container's overflow:auto property. Now the menu is appended to <body> by the bootstrap-contextmenu plugin instead.

--- a/gui/web/app/styles/app.css
+++ b/gui/web/app/styles/app.css
@@ -99,10 +99,6 @@ body {
 
 /*** itemTable ***/
 
-.item-table-buttons {
-    overflow: visible !important;
-}
-
 .table-bordered > thead > tr > th,
 .table-bordered > tbody > tr > th,
 .table-bordered > tfoot > tr > th,
